test/library/packages/ZMQ/not-serializable.good
not-serializable.chpl:20: error: Type "borrowed Foo" is not serializable by ZMQ
